--- a/index.html
+++ b/index.html
@@ -2,12 +2,78 @@
 <html>
 <body>
 
-<p>Click on the "Choose File" button to upload a file:</p>
+<h1>Your detail</h1>
 
-<form action="validate_file.php" method ="POST" enctype="multipart/form-data" >
-  <input type="file" id="filename" name="filename" >
-  <input type="submit">
+<form action="validate.php" method ="POST" enctype="multipart/form-data">
+
+	<label> Your Name: </label>
+	<input type="text" id='name' name="name">
+	<br><br>
+	<label>Email Address: </label>
+	<input type="text" id='email' name='email'>
+	<br><br>
+	<label for ="college">Choose college: </label>
+	<select name="college" id = 'college' name='college'>
+	<option></option>
+	</select>
+	<br><br>
+	<label for ="program">Choose program: </label>
+	<select name ="program" id ='program' name='program'>
+	</select>
+	<br><br>
+	<label for="filename">Click on "Choose file" button to upload a PDF file: </label>
+	<input type="file" id="filename" name="filename" >
+	<br><br>
+	
+	<input type="submit" id="submit">
 </form>
+<script>
+	var college = document.getElementById('college');
+	var program = document.getElementById('program');
+	loadCollege();
+	function loadCollege(){
+		var xhr = new XMLHttpRequest();
+		xhr.open('GET','college.php',true);
+		xhr.addEventListener('load',function(){
+			let items= JSON.parse(xhr.responseText);
+			for(let i=0;i<items.length;i++){
+				let item = items[i];
+				let option = document.createElement('option');
+				option.setAttribute('value',''+item.id+'')
+				option.innerHTML=item.name;
+				college.appendChild(option);
+			}
+		})
+		xhr.send();
+	}
+	
+	college.addEventListener('change',loadProgram);
+	
+	function loadProgram(){
+		let newItem={
+			"college_id" : document.getElementById('college').value
+			}
+			let xhr =new XMLHttpRequest();
+			xhr.open("POST",'program.php',true);
+			xhr.send(JSON.stringify(newItem));
+			xhr.addEventListener('load',function(){
+			let items= JSON.parse(xhr.responseText);
+			//still needs to be fixed
+			if (document.contains(document.getElementById('option'))){
+					document.getElementById('option').remove();
+				}
+			for (let i=0;i<items.length;i++){
+				let item = items[i];
+				let option = document.createElement('option');
+				option.setAttribute('id','option');
+				option.setAttribute('value',''+item.name+'');
+				option.innerHTML = item.name;
+				program.appendChild(option);
+			}
+		})
+		xhr.send();		
+	}
+</script>
 
 </body>
 </html>
